--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,20 +3,20 @@ server.port=80
 #Database
 spring.datasource.url=jdbc:mysql://localhost:3306/jpa_test
 spring.datasource.username=root
-spring.datasource.password=941218
+spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 ########################################################
-### Java Persistence Api JPAÏà¹ØÅäÖÃ
+### Java Persistence Api JPAç›¸å…³é…ç½®
 ########################################################
-#Ö¸¶¨Êı¾İ¿âÀàĞÍ
+#æŒ‡å®šæ•°æ®åº“ç±»å‹
 spring.jpa.database=mysql
-#¿ØÖÆÌ¨´òÓ¡sql
+#æ§åˆ¶å°æ‰“å°sql
 spring.jpa.show-sql=true
-#½¨±í²ßÂÔ£¬ÕâÀïÓÃupdate£¬¼´¸ù¾İÊµÌå¸üĞÂ±í½á¹¹
+#å»ºè¡¨ç­–ç•¥ï¼Œè¿™é‡Œç”¨updateï¼Œå³æ ¹æ®å®ä½“æ›´æ–°è¡¨ç»“æ„
 spring.jpa.hibernate.ddl-auto=update
-#±íÖĞ×Ö¶ÎÃüÃû²ßÂÔ,ÕâÀïÒªÒıÈëhibernateµÄºËĞÄ°ü£¬²»È»Õâ¸öÃüÃû²ßÂÔ»á±¨´í
+#è¡¨ä¸­å­—æ®µå‘½åç­–ç•¥,è¿™é‡Œè¦å¼•å…¥hibernateçš„æ ¸å¿ƒåŒ…ï¼Œä¸ç„¶è¿™ä¸ªå‘½åç­–ç•¥ä¼šæŠ¥é”™
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.naming.strategy=org.hibernate.cfg.ImprovedNamingStrategy
-#·½ÑÔ
+#æ–¹è¨€
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
